# Gen

./: .gitignore  CMakeLists.txt  Generate.sln  LICENSE  README.md  inject_dll.bat  xmake.lua
CompilerProxy/: CMakeLists.txt  ProcessContent.h  RunProcess.h  main.cpp  process_content.h  run_process.h
DllInjector/: DllInjector.vcxproj  DllInjector.vcxproj.filters  main.cpp
Example/: CMakeLists.txt  Empty.ixx  Example.template.h  Example.vcxproj  Example_GENERATE.vcxproj  Example_GENERATE.vcxproj.filters  GenerateExamples.ixx  GenerateMainImage.cpp  GenerateMappedStruct.ixx  HelloCpp2.cpp  MappedStructExample.ixx  Material.ixx  MyClass.ixx  MyEnum.ixx  PreGenerate.ixx  Shape.ixx  TestStruct.ixx  generate_example.ixx  generate_shader.cpp  main.cpp  mainImage.glsl  shape.ixx
Hook/: Hook.vcxproj  Hook.vcxproj.filters  dllmain.cpp
Hook/detour/: uimports.cpp
